[package]
name = "hyphertool"
authors = ["Maarten van Gompel <proycon@anaproy.nl>"]
description = "Hypertool is a command-line tool for syllabification and hyphenisation."
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/proycon/hyphertool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
hypher = "0.1.4"
